--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <title>clock</title>
     <link href = "style.css" rel = "stylesheet">  
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <script defer src = "script.js"></script>
   </head>
   <body>
     <div class = "clock">
-      <div class = "hand hour"></div>
-      <div class = "hand minute"></div>
-      <div class = "hand second"></div>
+      <div id = "hour" class = "hand hour"></div>
+      <div id = "minute" class = "hand minute"></div>
+      <div id = "second" class = "hand second"></div>
       <div class = "nums num1">1</div>
       <div class = "nums num2">2</div>
       <div class = "nums num3">3</div>
